test/libsolidity/syntaxTests/nameAndTypeResolution/062_base_constructor_arguments_override.sol
contract A { constructor(uint a) public { } }
contract B is A { }
// ----
// TypeError: (46-65): Contract "B" should be marked as abstract.
